test/expected/declare_mo_arrow_i.out
declare -> as member operator returning int
                                        ^
41: error: invalid operator "->" return type "int"; must be a pointer to struct, union, or class
